--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "helical",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "coverage": "nyc --reporter=lcov npm test"
   },
   "keywords": [
     "generator",
@@ -17,6 +18,7 @@
     "fs-extra": "^0.26.2",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
+    "node-notifier": "^4.4.0",
     "nunjucks": "^2.1.0",
     "underscore": "^1.8.3",
     "watch": "^0.16.0",
@@ -28,5 +30,11 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/gimenete/helical.git"
+  },
+  "devDependencies": {
+    "mkdirp": "^0.5.1",
+    "mocha": "^2.4.5",
+    "nyc": "^5.5.0",
+    "rimraf": "^2.5.1"
   }
 }
